--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,20 @@
 .hero{
     position: relative;
 }
-.banner-img{
+/* .banner-img{
     width: 100%;
     mask-image: linear-gradient(to right, transparent, black 75%);
     -webkit-mask-image: linear-gradient(to right, transparent, black 75%);
-}
+} */
+.banner-img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    transition:  opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
+    mask-image: linear-gradient(to right, transparent, black 75%);
+    -webkit-mask-image: linear-gradient(to right, transparent, black 75%);
+  }
+  
 .hero-caption{
     position: absolute;
     width: 100%;
@@ -57,6 +66,9 @@
     padding: 6%;
 }
 @media (max-width : 1024px) {
+    .banner-img{
+        height: 50vh;
+    }
     .hero-caption .title-cards{
         display: none;
     }
