--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -159,6 +159,7 @@
     overflow-y: auto;
     background-color: #141414;
     width: 100%;
+    height: 100vh;
     padding: 20px 6%;
     z-index: 99;
   }
@@ -220,7 +221,7 @@
 
   .lang-dropdown {
     position: relative; /* Instead of absolute */
-    top: 150;
+    display: block !important;
     left: 0;
     background: #1f1f1f;
     max-height: 200px;
